--- a/website/web/WEB-INF/classes/db.properties
+++ b/website/web/WEB-INF/classes/db.properties
@@ -1,4 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/zhirundl
+jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
-jdbc.password=password
+jdbc.password=root
+
+#∞¢¿Ô‘∆mysql
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/zhirundl
+#jdbc.username=root
+#jdbc.password=password
