--- a/website/web/WEB-INF/web.xml
+++ b/website/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <display-name></display-name>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
     <filter>
         <filter-name>characterEncodingFilter</filter-name>
